# fempeg

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
assets/: nef.py
src/: exiftool.rs  init_libraw.rs  libraw_ffi.rs  main.rs  term_colors.rs
