[package]
name = "fempeg"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5.1"
image = { version = "0.25.8", features = ["pnm"]}
libloading = "0.8.9"
num_cpus = "1.17.0"
rayon = "1.11.0"
rexif = "0.7.5"
colored = "3.0"

include_dir = { version = "0.7.4", optional = true }
serde_json = { version = "1.0.145", optional = true }
ratatui = { version = "0.29", optional = true, features = ["crossterm"] }
crossterm = { version = "0.29", optional = true }
lazy_static = "1.5.0"

[features]
default = []

include_exiftool = ["dep:serde_json", "dep:include_dir", "dep:ratatui", "dep:crossterm"]

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
